Initial commit of js files and index file

--- a/index.html
+++ b/index.html
@@ -6,21 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/reset.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/reset.css" /> -->
     <link rel="stylesheet" href="css/styles.min.css" />
 </head>
 <body>
 
+    <ul id="star-wars-characters">
+        <li class="character luke" data-type="hero">Luke Skywalker</li>
+        <li class="character yoda" data-type="master">Yoda</li>
+        <li class="character badboy" data-type="villain">Darth Vader</li>
+    </ul>
+
+    <button class="toggler">Click Me</button>
+    <div class="add">Add a "red" class to me!</div>
+    <div class="remove">Remove the class, "remove" from me!</div>
+    <div class="contains1">Do I have a "blue" class?</div>
+    <div class="contains2 blue">Do I have a "blue" class?</div>
+    <div class="toggle">Do I have a "red" class? If yes, remove it. If no, add it.</div>
+
     <!-- Main content here -->
     <div class="container">
-
+        
     </div>
 
     <!-- ACCORDION -->
     <div class="accordion">
 
     </div>
+
 
     <!-- TABBY -->
     <div class="tabby">
