--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Main content here -->
     <div class="container">
         <h1>Click the button the open the sidebar!</h1>
-        <button>
+        <button class="offcanvas__button">
             <span>Menu</span>
         </button> 
 
@@ -62,10 +62,37 @@
         </div>
     
         <ul id="star-wars-characters">
-                <li class="character luke" data-type="hero">Luke Skywalker</li>
-                <li class="character yoda" data-type="master">Yoda</li>
-                <li class="character badboy" data-type="villain">Darth Vader</li>
+            <li class="character luke" data-type="hero">Luke Skywalker</li>
+            <li class="character yoda" data-type="master">Yoda</li>
+            <li class="character badboy" data-type="villain">Darth Vader</li>
+        </ul>
+
+        <div class="characters">
+            <ul class="hobbits">
+                <li>Frodo Baggins</li>
+                <li>Samwise "Sam" Gamgee</li>
+                <li>Meriadoc "Merry" Brandybuck</li>
+                <li>Peregrin "Pippin" Took</li>
+                <li>Bilbo Baggins</li>
             </ul>
+            <ul class="humans">
+                <li>Gandalf</li>
+                <li>Saruman</li>
+                <li>Aragorn</li>
+                <li>Boromir</li>
+                <li>Faramir</li>
+            </ul>
+            <ul class="elves">
+                <li>Legolas</li>
+                <li>Glorfindel</li>
+                <li>Elrond</li>
+                <li>Arwen Evenstar</li>
+            </ul>
+            <ul class="enemies">
+                <li>Sauron</li>
+                <li>Nazgûl</li>
+            </ul>
+        </div>
         
             <button class="toggler">Click Me</button>
             <div class="add">Add a "red" class to me!</div>
