--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                 </svg>
             </button>
         
-            <div class="carousel__dots">
+            <!-- <div class="carousel__dots">
                 <button class="carousel__dot is-selected"></button>
                 <button class="carousel__dot"></button>
                 <button class="carousel__dot"></button>
-            </div>
+            </div> -->
         </section>
     
     </div>
