--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
             </form>
         </div>
 
+        <!-- To Do List -->
         <div style="margin-top:20px;">
             <form action="#" class="todolist" autocomplete="off">
                 <!-- Add new task -->
@@ -497,6 +498,19 @@
                 <div class="todolist__empty-state">Your todo list is empty. Hurray! 🎉</div>
             </form>
         </div>
+
+        <!-- Typeahead -->
+        <div style="margin-top:20px;">
+            <form action="#" autocomplete="off">
+                <div class="typeahead">
+                    <input name="country" id="country" />
+                    <ul hidden>
+                        
+                    </ul>
+                </div>
+            </form>
+        </div>
+
 
 
     </div>
